--- a/backend/package.json
+++ b/backend/package.json
@@ -9,28 +9,33 @@
     "test": "jest",
     "lint": "eslint ."
   },
-  "keywords": ["education", "dyslexia", "learning", "api"],
+  "keywords": [
+    "education",
+    "dyslexia",
+    "learning",
+    "api"
+  ],
   "author": "LexiLearn Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
+    "@types/node": "^20.10.0",
     "eslint": "^8.55.0",
-    "@types/node": "^20.10.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   },
   "type": "commonjs"
 }
